# maia

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: assembly.rs  boot.rs  kernel.rs  main.rs  relocate.rs
src/arch/riscv/: riscv64-efi.S  riscv64-efi.ld
src/elf/: dynamic.rs  elf_file.rs  error.rs  header.rs  mod.rs  program_header.rs
