[package]
name = "mercuros-maia"
version = "0.0.1"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = []

debug_kernel = []
debug_mmap = []
debug_all = ["debug_kernel", "debug_mmap"]

[dependencies]
mercuros-uefi = { git = "https://github.com/MercurOS/uefi", tag = "v0.1.0" }

[build-dependencies]
llvm-tools = "0.1"
